fix(remote): raise z-index for temperature and brightness overlays
This should also have an effect on modules that use high z-index values, such as MMM-Calendar-Ext3 (z-index 30).

Fixes #374.

--- a/MMM-Remote-Control.css
+++ b/MMM-Remote-Control.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 90;
   width: 100vw;
   height: 100vh;
   transition: background-color 1.5s ease;
